--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,13 @@
-# Pipeline para proyecto Python - explicado por etapas
+# =====================================================
+# 📦 Pipeline para proyecto Python - Azure DevOps
+# Adaptado a la estructura actual con /sgt y /test
+# =====================================================
 
 trigger:
 - main  # Se ejecuta en cada push a la rama main
 
 pool:
-  name: 'AgenteLocal'
+  name: 'AgenteLocal'  # Usa tu agente local o cámbialo a 'ubuntu-latest' si es remoto
 
 stages:
 
@@ -22,7 +25,7 @@ stages:
       displayName: 'Configurar Python 3.11'
 
 # =====================================================
-# 2️⃣ Etapa: Verificar archivos del repositorio (opcional)
+# 2️⃣ Etapa: Verificar archivos del repositorio
 # =====================================================
 - stage: VerificarArchivos
   displayName: 'Etapa 2: Verificar archivos en el repo'
@@ -33,7 +36,7 @@ stages:
       displayName: 'Listar archivos del repositorio'
 
 # =====================================================
-# 3️⃣ Etapa: Instalar dependencias en virtualenv
+# 3️⃣ Etapa: Instalar dependencias
 # =====================================================
 - stage: InstalarDependencias
   displayName: 'Etapa 3: Instalar dependencias'
@@ -59,7 +62,7 @@ stages:
     - script: |
         cd $(Build.SourcesDirectory)
         venv\Scripts\activate
-        pytest tests --maxfail=1 --disable-warnings -q
+        pytest test --maxfail=1 --disable-warnings -q
       displayName: 'Ejecutar pruebas con pytest'
 
 # =====================================================
@@ -67,6 +70,7 @@ stages:
 # =====================================================
 - stage: PublicarArtefactos
   displayName: 'Etapa 5: Publicar artefactos'
+  condition: succeeded()  # Solo si todas las etapas anteriores fueron exitosas
   jobs:
   - job: PublicarArtefactosJob
     steps:
